<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recent_activity"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/recent_activities" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_my_roll_no" />
        <item
            android:id="@+id/nav_association_activate"
            android:icon="@drawable/ic_check_circle_black_24dp"
            android:title="@string/create_account" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/account_activity" />
        <item
            android:id="@+id/nav_association_help"
            android:title="@string/ass"
            android:icon="@drawable/ic_place_black_24dp"/>
        <item android:title="@string/exit_app"
            android:id="@+id/nav_exit_app"
            android:icon="@drawable/ic_close_black_24dp"/>

    </group>

    <!--<item android:title="@string/applicant_s_help">
        <menu>
            <item
                android:id="@+id/nav_create_applicant"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/applicant_s_register" />
            <item
                android:id="@+id/nav_applicant_account"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="Applicant Account" />
        </menu>
    </item>-->

    <item android:title="Log Out"
        android:id="@+id/nav_log_out"
        android:icon="@drawable/ic_exit_to_app_black_24dp"/>

    <item android:title="Communicate">
        <menu>
            <item android:title="About"
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_help_black_24dp"/>
        </menu>
    </item>

</menu>
