<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:layout_marginTop="6sp"
            android:padding="10sp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account_for_association"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                />
            <include layout="@layout/spinners"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/name"
                style="@style/text_style"
                />
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/id_name"
                android:padding="10sp"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:background="@drawable/border"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/phone_number_1"
                style="@style/text_style"
                />
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/id_phone1"
                android:maxLines="1"
                android:padding="10sp"
                android:lines="1"
                android:inputType="phone"
                android:singleLine="true"
                android:background="@drawable/border"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/phone_number_2"
                style="@style/text_style"
                />
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/id_phone2"
                android:maxLines="1"
                android:padding="10sp"
                android:inputType="phone"
                android:lines="1"
                android:singleLine="true"
                android:background="@drawable/border"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/your_mail_id"
                style="@style/text_style"
                />
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/id_email"
                android:maxLines="1"
                android:padding="10sp"
                android:lines="1"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:background="@drawable/border"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/password"
                style="@style/text_style"
                />
            <EditText
                android:layout_width="match_parent"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:padding="10sp"
                android:id="@+id/id_password"
                android:inputType="textPassword"
                android:background="@drawable/border"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:background="@drawable/button"
                android:textColor="#FFFFFF"
                android:text="@string/create_account"
                android:id="@+id/id_sign_up"
                android:textAllCaps="false"
                android:layout_marginBottom="25sp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>