<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/border"
        android:padding="10sp"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_marginTop="10sp"
            android:id="@+id/id_login_mail"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:hint="@string/your_e_mail_address"
            android:background="@drawable/border"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:hint="@string/enter_your_password"
            android:id="@+id/id_login_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:background="@drawable/border"
            android:layout_marginTop="15sp"
            android:imeOptions="actionGo"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:id="@+id/id_login_button"
            android:layout_marginBottom="20sp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white_shad"
            android:background="@drawable/button"
            />
    </LinearLayout>

</LinearLayout>